# ytb-dl-service

./: Dockerfile  Dockerfile.consumer  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/ytb_dl_service/consumer/: client.py
src/ytb_dl_service/producer/: server.py  service.py
