[project]
name = "ytb-dl-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shimarin[flask]==0.3.3",
    "yt-dlp>=2025.2.19",
    "uvloop>=0.21.0",
    "hypercorn>=0.17.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
